--- a/backend/scoring/stats_categories.yaml
+++ b/backend/scoring/stats_categories.yaml
@@ -29,3 +29,17 @@ role:
     - 生命
     - 生命%
     - 治療效果加成
+
+element:
+  氣動:
+    - 氣動傷害加成
+  湮滅:
+    - 湮滅傷害加成
+  衍射:
+    - 衍射傷害加成
+  熱熔:
+    - 熱熔傷害加成
+  冷凝:
+    - 冷凝傷害加成
+  導電:
+    - 導電傷害加成
