--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,40 +1,35 @@
-blinker==1.8.2
+blinker==1.9.0
+cachetools==6.2.4
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.1.8
 colorama==0.4.6
-easyocr==1.7.2
-exceptiongroup==1.3.1
-filelock==3.16.1
-Flask==3.0.3
-Flask-Cors==5.0.0
-fsspec==2025.3.0
-imageio==2.35.1
-importlib_metadata==8.5.0
-iniconfig==2.1.0
+Flask==3.1.2
+google-api-core==2.28.1
+google-auth==2.45.0
+google-cloud-vision==3.11.0
+googleapis-common-protos==1.72.0
+grpcio==1.76.0
+grpcio-status==1.76.0
+idna==3.11
+importlib_metadata==8.7.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
-lazy_loader==0.4
-MarkupSafe==2.1.5
-mpmath==1.3.0
-networkx==3.1
-ninja==1.13.0
-numpy==1.24.4
-opencv-python-headless==4.12.0.88
+MarkupSafe==3.0.3
+memory-profiler==0.61.0
+numpy==1.25.2
 packaging==25.0
-pillow==10.4.0
-pluggy==1.5.0
-pyclipper==1.3.0.post6
-pytest==8.3.5
-python-bidi==0.6.7
-PyWavelets==1.4.1
+Pillow==9.5.0
+proto-plus==1.27.0
+protobuf==6.33.2
+psutil==7.2.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pytesseract==0.3.10
 PyYAML==6.0.3
-scikit-image==0.21.0
-scipy==1.10.1
-shapely==2.0.7
-sympy==1.13.3
-tifffile==2023.7.10
-tomli==2.3.0
-torch==2.4.1
-torchvision==0.19.1
-typing_extensions==4.13.2
-Werkzeug==3.0.6
-zipp==3.20.2
+requests==2.32.5
+rsa==4.9.1
+typing_extensions==4.15.0
+urllib3==2.6.2
+Werkzeug==3.1.4
+zipp==3.23.0
