--- a/backend/scoring/character_template.yaml
+++ b/backend/scoring/character_template.yaml
@@ -1,8 +1,10 @@
 # === 角色屬性模板 ===
+# en: 英文名
 # main_attr：角色推薦主詞條
 # dmg_type：角色主要輸出方式
 # role：角色定位
-# 拉海洛
+# element: 元素傷害
+
 千咲:
   en: Chisa
   main_attr: 攻擊
@@ -36,6 +38,14 @@
   role: 輸出
   element: 衍射
 
+洛可可:
+  en: Roccia
+  main_attr: 攻擊
+  dmg_type: 
+    - 重擊
+  role: 輸出
+  element: 湮滅
+
 嘉貝莉娜:
   en: Galbrena
   main_attr: 攻擊
@@ -51,6 +61,14 @@
     - 共鳴解放
   role: 輸出
   element: 氣動
+
+奧古斯塔:
+  en: Augusta
+  main_attr: 攻擊
+  dmg_type: 
+    - 重擊
+  role: 輸出
+  element: 導電
 
 卡提希婭:
   en: Cartethyia
@@ -76,6 +94,7 @@
     - 共鳴解放
   role: 輸出
   element: 熱熔
+
 # 黑海岸
 守岸人:
   en: Shorekeeper
@@ -101,3 +120,11 @@
     - 共鳴技能
   role: 輸出
   element: 衍射
+
+長離:
+  en: Changli
+  main_attr: 攻擊
+  dmg_type:
+    - 普攻
+  role: 輸出
+  element: 熱熔
